Add styles for all new files

--- a/app/views/barn_and_slate_records/new.html.erb
+++ b/app/views/barn_and_slate_records/new.html.erb
@@ -3,3 +3,14 @@
 <%= render 'form', barn_and_slate_record: @barn_and_slate_record %>
 
 <%= link_to 'Back', barn_and_slate_records_path %>
+
+<div class="columns">
+  <div class="column">
+    <div class="card">
+      <div class="card-header"></div>
+      <div class="card-content">
+        <div class="content"></div>
+      </div>
+    </div>
+  </div>
+</div>
