--- a/app/views/input_calibrations/new.html.erb
+++ b/app/views/input_calibrations/new.html.erb
@@ -3,3 +3,14 @@
 <%= render 'form', input_calibration: @input_calibration %>
 
 <%= link_to 'Back', input_calibrations_path %>
+
+<div class="columns">
+  <div class="column">
+    <div class="card">
+      <div class="card-header"></div>
+      <div class="card-content">
+        <div class="content"></div>
+      </div>
+    </div>
+  </div>
+</div>
