--- a/app/views/irriagtion_schedules/new.html.erb
+++ b/app/views/irriagtion_schedules/new.html.erb
@@ -3,3 +3,14 @@
 <%= render 'form', irriagtion_schedule: @irriagtion_schedule %>
 
 <%= link_to 'Back', irriagtion_schedules_path %>
+
+<div class="columns">
+  <div class="column">
+    <div class="card">
+      <div class="card-header"></div>
+      <div class="card-content">
+        <div class="content"></div>
+      </div>
+    </div>
+  </div>
+</div>
