--- a/app/views/cereal_stores/new.html.erb
+++ b/app/views/cereal_stores/new.html.erb
@@ -3,3 +3,14 @@
 <%= render 'form', cereal_store: @cereal_store %>
 
 <%= link_to 'Back', cereal_stores_path %>
+
+<div class="columns">
+  <div class="column">
+    <div class="card">
+      <div class="card-header"></div>
+      <div class="card-content">
+        <div class="content"></div>
+      </div>
+    </div>
+  </div>
+</div>
