--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -3,3 +3,15 @@
 <%= render 'form', store: @store %>
 
 <%= link_to 'Back', stores_path %>
+
+
+<div class="columns">
+  <div class="column">
+    <div class="card">
+      <div class="card-header"></div>
+      <div class="card-content">
+        <div class="content"></div>
+      </div>
+    </div>
+  </div>
+</div>
