--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Activities</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Company name</th>
@@ -13,7 +13,7 @@
       <th>Activity</th>
       <th>Pro number</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -28,9 +28,19 @@
         <td><%= activity.Activity %></td>
         <td><%= activity.Pro_Number %></td>
         <td><%= activity.user_id %></td>
-        <td><%= link_to 'Show', activity %></td>
-        <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
-        <td><%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="navbar">
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a class="navbar-link">
+              Actions
+            </a>
+
+            <div class="navbar-dropdown has-background-info">
+              <%= link_to 'Show', activity, class:"navbar-item" %>
+              <%= link_to 'Edit', edit_activity_path(activity), class:"navbar-item" %>
+              <%= link_to 'Destroy', activity, method: :delete, data: { confirm: 'Are you sure?' }, class:"navbar-item" %>
+            </div>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -38,4 +48,4 @@
 
 <br>
 
-<%= link_to 'New Activity', new_activity_path %>
+<%= link_to 'New Activity', new_activity_path, class:"button is-success" %>
