--- a/app/views/deduction_tables/new.html.erb
+++ b/app/views/deduction_tables/new.html.erb
@@ -1,15 +1,14 @@
-<h1>New Deduction Table</h1>
-
-<%= render 'form', deduction_table: @deduction_table %>
-
-<%= link_to 'Back', deduction_tables_path %>
-
 <div class="columns">
   <div class="column">
     <div class="card">
-      <div class="card-header"></div>
+      <div class="card-header">
+        <h1>New Deduction Table</h1>
+      </div>
       <div class="card-content">
-        <div class="content"></div>
+        <div class="content">
+          <%= render 'form', deduction_table: @deduction_table %>
+          <%= link_to 'Back', deduction_tables_path, class:"button is-dark" %>
+        </div>
       </div>
     </div>
   </div>
