--- a/app/views/land_names/new.html.erb
+++ b/app/views/land_names/new.html.erb
@@ -1,15 +1,14 @@
-<h1>New Land Name</h1>
-
-<%= render 'form', land_name: @land_name %>
-
-<%= link_to 'Back', land_names_path %>
-
 <div class="columns">
   <div class="column">
     <div class="card">
-      <div class="card-header"></div>
+      <div class="card-header">
+        <h1>New Land Name</h1>
+      </div>
       <div class="card-content">
-        <div class="content"></div>
+        <div class="content">
+          <%= render 'form', land_name: @land_name %>
+          <%= link_to 'Back', land_names_path, class:"button is-dark"  %>
+        </div>
       </div>
     </div>
   </div>
