--- a/app/views/mkt_payments/new.html.erb
+++ b/app/views/mkt_payments/new.html.erb
@@ -1,15 +1,14 @@
-<h1>New Mkt Payment</h1>
-
-<%= render 'form', mkt_payment: @mkt_payment %>
-
-<%= link_to 'Back', mkt_payments_path %>
-
 <div class="columns">
   <div class="column">
     <div class="card">
-      <div class="card-header"></div>
+      <div class="card-header">
+        <h1>New Mkt Payment</h1>
+      </div>
       <div class="card-content">
-        <div class="content"></div>
+        <div class="content">
+          <%= render 'form', mkt_payment: @mkt_payment %>
+          <%= link_to 'Back', mkt_payments_path, class:"button is-dark" %>
+        </div>
       </div>
     </div>
   </div>
