--- a/app/views/set_seasons/new.html.erb
+++ b/app/views/set_seasons/new.html.erb
@@ -1,15 +1,14 @@
-<h1>New Set Season</h1>
-
-<%= render 'form', set_season: @set_season %>
-
-<%= link_to 'Back', set_seasons_path %>
-
 <div class="columns">
   <div class="column">
     <div class="card">
-      <div class="card-header"></div>
+      <div class="card-header">
+        <h1>New Set Season</h1>
+      </div>
       <div class="card-content">
-        <div class="content"></div>
+        <div class="content">
+          <%= render 'form', set_season: @set_season %>
+          <%= link_to 'Back', set_seasons_path, class:"button is-dark my-3" %>
+        </div>
       </div>
     </div>
   </div>
