--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,16 +1,14 @@
-<h1>New Store</h1>
-
-<%= render 'form', store: @store %>
-
-<%= link_to 'Back', stores_path %>
-
-
 <div class="columns">
   <div class="column">
     <div class="card">
-      <div class="card-header"></div>
+      <div class="card-header">
+        <h1>New Store</h1>
+      </div>
       <div class="card-content">
-        <div class="content"></div>
+        <div class="content">
+          <%= render 'form', store: @store %>
+          <%= link_to 'Back', stores_path, class:"button is-dark my-3" %>
+        </div>
       </div>
     </div>
   </div>
