--- a/app/views/client_payments/index.html.erb
+++ b/app/views/client_payments/index.html.erb
@@ -32,12 +32,12 @@
         </div>
         <div class="card-content">
           <div class="content">
-            <%= client_payment.Category %><br>
-            <%= client_payment.Receipt_Number %><br>
-            <%= client_payment.Amount_Paid %><br>
-            <%= client_payment.Balance %><br>
-            <%= client_payment.Date %><br>
-            <%= client_payment.Pro_Number %>
+            <div><strong>Category:</strong> <%= client_payment.Category %></div>
+            <div><strong>Receipt_Number:</strong> <%= client_payment.Receipt_Number %></div>
+            <div><strong>Amount_Paid:</strong> <%= client_payment.Amount_Paid %></div>
+            <div><strong>Balance:</strong> <%= client_payment.Balance %></div>
+            <div><strong>Date:</strong> <%= client_payment.Date %></div>
+            <div><strong>Pro_Number:</strong> <%= client_payment.Pro_Number %></div>
           </div>
         </div>
         <footer class="card-footer">
