--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,9 +62,8 @@
             </div>
 
             <div class="field">
-              <%= f.label :Status, class:"label" %>
               <div class="control">
-                <%= f.text_field :Status, autocomplete: "Status", class:"input" %>
+                <%= f.text_field :Status, autocomplete: "Status", class:"input", type: :hidden %>
               </div>
             </div>
 
