--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,22 @@
 
   <body>
   <%= render 'layouts/header' %>
-
     <div class="columns">
       <%if user_signed_in? %>
-        <div class="column is-3 has-background-primary">
-          <%= render 'layouts/sidebar'%>
-        </div>
-      
-
-        <div class="column is-9 has-background-grey-lighter">
-          <div class="columns is-centered">
-            <div class="column is-11">
-              <%= yield %>
+        <% unless current_user.Status == true  %>
+          <%= render 'layouts/verification'%>
+        <%else%>
+          <div class="column is-3 has-background-primary">
+            <%= render 'layouts/sidebar'%>
+          </div>
+          <div class="column is-9 has-background-grey-lighter">
+            <div class="columns is-centered">
+              <div class="column is-11">
+                <%= yield %>
+              </div>
             </div>
           </div>
-        </div>
+        <% end %>
       <% else %>
         <div class="container">
           <%= yield %>
