--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <% unless current_user.Status == true  %>
           <%= render 'layouts/verification'%>
         <%else%>
-          <div class="column is-3 has-background-primary">
+          <div class="column is-3 has-background-primary" style="overflow-y: scroll;">
             <%= render 'layouts/sidebar'%>
           </div>
           <div class="column is-9 has-background-grey-lighter">
