--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,12 @@
  *= require_self
  */
 @import 'bulma';
+
+.side-bar {
+  background-color: rgba(3, 3, 78, 0.993);
+}
+
+.overflow-y {
+  height: 90vh;
+  overflow-y: scroll;
+}
