--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'New Activity', new_activity_path, class:"button is-success my-3" %>
+<br>
+
 <h1 class="has-background-white">Activities</h1>
 
 <table class="table">
@@ -48,4 +51,4 @@
 
 <br>
 
-<%= link_to 'New Activity', new_activity_path, class:"button is-success" %>
+
