--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'New Advertisement', new_advertisement_path, class:"button is-success my-3" %>
+
 <h1 class="has-background-white">Advertisements</h1>
 
 <table class="table">
@@ -40,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Advertisement', new_advertisement_path %>
+
