--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'New Asset', new_asset_path, class:"button is-success my-3" %>
 <h1>Assets</h1>
 
 <table>
@@ -42,4 +43,4 @@
 
 <br>
 
-<%= link_to 'New Asset', new_asset_path %>
+
