--- a/app/views/barn_and_slate_records/index.html.erb
+++ b/app/views/barn_and_slate_records/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'New Barn And Slate Record', new_barn_and_slate_record_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Barn And Slate Records</h1>
 
 <table class="table">
@@ -44,4 +45,4 @@
 
 <br>
 
-<%= link_to 'New Barn And Slate Record', new_barn_and_slate_record_path %>
+
