--- a/app/views/calenders/index.html.erb
+++ b/app/views/calenders/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Calender', new_calender_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Calenders</h1>
 
 <div class="table-container">
@@ -40,4 +40,4 @@
 </div>
 <br>
 
-<%= link_to 'New Calender', new_calender_path %>
+
