--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Cashflow', new_cashflow_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Cashflows</h1>
 
 <table class="table">
@@ -50,4 +50,4 @@
 
 <br>
 
-<%= link_to 'New Cashflow', new_cashflow_path %>
+
