--- a/app/views/cereal_sales/index.html.erb
+++ b/app/views/cereal_sales/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Cereal Sale', new_cereal_sale_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Cereal Sales</h1>
 
 <table class="table">
@@ -56,4 +56,4 @@
 
 <br>
 
-<%= link_to 'New Cereal Sale', new_cereal_sale_path %>
+
