--- a/app/views/cereal_stores/index.html.erb
+++ b/app/views/cereal_stores/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Cereal Store', new_cereal_store_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Cereal Stores</h1>
 
 <table class="table">
@@ -46,4 +46,4 @@
 
 <br>
 
-<%= link_to 'New Cereal Store', new_cereal_store_path %>
+
