--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Delivery', new_delivery_path, class:"button is-success my-3" %>
 <h1>Deliveries</h1>
 
 <table class="has-background-white">
@@ -48,4 +48,4 @@
 
 <br>
 
-<%= link_to 'New Delivery', new_delivery_path %>
+
