--- a/app/views/harvestings/index.html.erb
+++ b/app/views/harvestings/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Harvesting', new_harvesting_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Harvestings</h1>
 
 <table class="table">
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Harvesting', new_harvesting_path %>
+
