--- a/app/views/input_calibrations/index.html.erb
+++ b/app/views/input_calibrations/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Input Calibration', new_input_calibration_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Input Calibrations</h1>
 
 <table class="table">
@@ -48,4 +48,4 @@
 
 <br>
 
-<%= link_to 'New Input Calibration', new_input_calibration_path %>
+
