--- a/app/views/irriagtion_schedules/index.html.erb
+++ b/app/views/irriagtion_schedules/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Irriagtion Schedule', new_irriagtion_schedule_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Irriagtion Schedules</h1>
 
 <table class="table">
@@ -48,4 +48,4 @@
 
 <br>
 
-<%= link_to 'New Irriagtion Schedule', new_irriagtion_schedule_path %>
+
