--- a/app/views/land_names/index.html.erb
+++ b/app/views/land_names/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Land Name', new_land_name_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Land Names</h1>
 
 <table class="table">
@@ -38,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Land Name', new_land_name_path %>
+
