--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,172 +1,172 @@
 <div class="columns is-centered">
-  <div class="column is-10">
+  <div class="column is-10 overflow-y">
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Activities', activities_path, class:"has-text-white" %>
 
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Adverts', advertisements_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Assets', assets_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Barn & Slate Records', barn_and_slate_records_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Calender', calenders_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Cash Requests', cash_requisitions_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Cashflows', cashflows_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Cereal Sales', cereal_sales_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Cereal Stores', cereal_stores_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Client Payments', client_payments_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Curings', curings_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Daily Requests', daily_requisitions_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Deduction Tables', deduction_tables_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Deliveries', deliveries_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Equipment Service', equipment_services_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Field Days', field_days_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Harvesting', harvestings_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Input Calibrations', input_calibrations_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Irrigation Schedules', irriagtion_schedules_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Land Names', land_names_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Mkt-payments', mkt_payments_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Purchases', purchases_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Rainfalls', rainfalls_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Rationing', rationings_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Rentals', rentals_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Seedbeds', seedbeds_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Set Seasons', set_seasons_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Stores', stores_path, class:"has-text-white" %>
       </div>
     </div>
 
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Tobacco Sales', tobacco_sales_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Wages', wages_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Weather Updates', weathers_path, class:"has-text-white" %>
       </div>
     </div>
     <div class="columns is-centered">
-      <div class="column is-11 my-2 py-1 has-background-link-dark">
+      <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Workshops', workshops_path, class:"has-text-white" %>
       </div>
     </div>
