--- a/app/views/mkt_payments/index.html.erb
+++ b/app/views/mkt_payments/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Mkt Payment', new_mkt_payment_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Mkt Payments</h1>
 
 <table class="table">
@@ -42,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Mkt Payment', new_mkt_payment_path %>
+
