--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Purchase', new_purchase_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Purchases</h1>
 
 <table class="table">
@@ -44,4 +44,4 @@
 
 <br>
 
-<%= link_to 'New Purchase', new_purchase_path %>
+
