--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'New Rental', new_rental_path, class:"button is-success my-3" %>
 
 <h1 class="has-background-white">Rentals</h1>
 
@@ -40,4 +41,3 @@
 
 <br>
 
-<%= link_to 'New Rental', new_rental_path %>
