--- a/app/views/wages/index.html.erb
+++ b/app/views/wages/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Wage', new_wage_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Wages</h1>
 
 <table class="table">
@@ -36,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Wage', new_wage_path %>
+
