--- a/app/views/weathers/_form.html.erb
+++ b/app/views/weathers/_form.html.erb
@@ -40,10 +40,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id, class:"label" %>
-    <div class="control">
-      <%= form.text_field :user_id, class:"input" %>
-    </div>
+    <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
   </div>
 
   <div class="actions">
