--- a/app/views/cash_requisitions/index.html.erb
+++ b/app/views/cash_requisitions/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Cash Requisition', new_cash_requisition_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Cash Requisitions</h1>
 
 <table class="table is-striped is-bordered">
@@ -44,4 +44,4 @@
 
 <br>
 
-<%= link_to 'New Cash Requisition', new_cash_requisition_path %>
+
