--- a/app/views/curings/index.html.erb
+++ b/app/views/curings/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Curing', new_curing_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Curings</h1>
 
 <table class="table">
@@ -42,4 +42,4 @@
 
 <br>
 
-<%= link_to 'New Curing', new_curing_path %>
+
