--- a/app/views/daily_requisitions/index.html.erb
+++ b/app/views/daily_requisitions/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Daily Requisition', new_daily_requisition_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Daily Requisitions</h1>
 
 <table class="table">
@@ -36,4 +36,4 @@
 
 <br>
 
-<%= link_to 'New Daily Requisition', new_daily_requisition_path %>
+
