--- a/app/views/deduction_tables/index.html.erb
+++ b/app/views/deduction_tables/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Deduction Table', new_deduction_table_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Deduction Tables</h1>
 
 <table class="table">
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Deduction Table', new_deduction_table_path %>
+
