--- a/app/views/field_days/_form.html.erb
+++ b/app/views/field_days/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :Company_Name, class:"label" %>
-    <%= form.text_field :Company_Name, class:"input" %>
+    <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
   </div>
 
   <div class="field">
