--- a/app/views/field_days/index.html.erb
+++ b/app/views/field_days/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Field Day', new_field_day_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Field Days</h1>
 
 <table class="table">
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Field Day', new_field_day_path %>
+
