--- a/app/views/harvestings/_form.html.erb
+++ b/app/views/harvestings/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :Compnay_Name, class:"label" %>
-    <%= form.text_field :Compnay_Name, class:"input" %>
+    <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
   </div>
 
   <div class="field">
@@ -52,8 +52,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id, class:"label" %>
-    <%= form.text_field :user_id, class:"input" %>
+    <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
   </div>
 
   <div class="actions">
