--- a/app/views/land_names/_form.html.erb
+++ b/app/views/land_names/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="field">
     <%= form.label :Company_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :Company_name, class:"input" %>
+      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
     </div>
   </div>
 
