--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           </div>
           <div class="column is-9 has-background-grey-dark">
             <div class="columns is-centered">
-              <div class="column is-12">
+              <div class="column is-12 overflow-y">
                 <%= yield %>
               </div>
             </div>
