--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :company_name, class:"label" %>
-    <%= form.text_field :company_name , class:"input"%>
+    <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
   </div>
 
   <div class="field">
@@ -62,8 +62,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id, class:"label" %>
-    <%= form.text_field :user_id, class:"input" %>
+    <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
   </div>
 
   <div class="actions">
