--- a/app/views/rationings/index.html.erb
+++ b/app/views/rationings/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Rationing', new_rationing_path, class:"button is-success my-3" %>
 <h1 class="has-background-white">Rationings</h1>
 
 <table class="table">
@@ -38,4 +38,4 @@
 
 <br>
 
-<%= link_to 'New Rationing', new_rationing_path %>
+
