--- a/app/views/tobacco_sales/index.html.erb
+++ b/app/views/tobacco_sales/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= link_to 'New Tobacco Sale', new_tobacco_sale_path, class:"button is-success my-3" %>
 <h1>Tobacco Sales</h1>
 
 <table class="table is-striped">
@@ -80,4 +80,4 @@
 
 <br>
 
-<%= link_to 'New Tobacco Sale', new_tobacco_sale_path %>
+
