Add employee table

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -71,6 +71,13 @@
         <%= link_to 'Deliveries', deliveries_path, class:"has-text-white" %>
       </div>
     </div>
+
+    <div class="columns is-centered">
+      <div class="column is-11 my-2 py-1 side-bar">
+        <%= link_to 'Show Employees', employees_path, class:"has-text-white" %>
+      </div>
+    </div>
+
     <div class="columns is-centered">
       <div class="column is-11 my-2 py-1 side-bar">
         <%= link_to 'Equipment Service', equipment_services_path, class:"has-text-white" %>
