--- a/app/views/wages/index.html.erb
+++ b/app/views/wages/index.html.erb
@@ -6,10 +6,11 @@
   <thead>
     <tr>
       <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>Total amount</th>
+      <th>Farm Name</th>
+      <th>Employee Name</th>
+      <th>Employee Number</th>
+      <th>Daily Rate</th>
+      <th>Worker Status</th>
       <th>Pro number</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -20,10 +21,11 @@
     <% @wages.each do |wage| %>
       <tr>
         <td><%= wage.Company_Name %></td>
-        <td><%= wage.Date %></td>
-        <td><%= wage.Season %></td>
         <td><%= wage.Farm_Name %></td>
-        <td><%= wage.Total_Amount %></td>
+        <td><%= wage.employee_name %></td>
+        <td><%= wage.empoyee_number %></td>
+        <td><%= wage.daily_rate %></td>
+        <td><%= wage.worker_status %></td>
         <td><%= wage.Pro_Number %></td>
         <td><%= wage.user_id %></td>
         <td><%= link_to 'Show', wage %></td>
