--- a/app/views/wages/show.html.erb
+++ b/app/views/wages/show.html.erb
@@ -6,23 +6,28 @@
 </p>
 
 <p>
-  <strong>Date:</strong>
-  <%= @wage.Date %>
-</p>
-
-<p>
-  <strong>Season:</strong>
-  <%= @wage.Season %>
-</p>
-
-<p>
-  <strong>Farm name:</strong>
+  <strong>Farm_Name:</strong>
   <%= @wage.Farm_Name %>
 </p>
 
 <p>
-  <strong>Total amount:</strong>
-  <%= @wage.Total_Amount %>
+  <strong>employee_name:</strong>
+  <%= @wage.employee_name %>
+</p>
+
+<p>
+  <strong>empoyee_number:</strong>
+  <%= @wage.empoyee_number %>
+</p>
+
+<p>
+  <strong>daily_rate:</strong>
+  <%= @wage.daily_rate %>
+</p>
+
+<p>
+  <strong>worker_status:</strong>
+  <%= @wage.worker_status %>
 </p>
 
 <p>
